lab1/Test/L1-A-5-93.output
Error Type B at Line 10
Error Type B at Line 12
Error Type A at Line 14
Error Type A at Line 14
