lab1/Test/L1-A-5-93.cmm
struct nUEyBM2ZJ {
  float m7kuDKC953G6bqwnGdx = - - - ! ! lUhH = - TEGbjVBmrUm 
    ( ) / ! Wua3dEWm18XOTQ1EKn * _18o0c8u9QS ( gynNZW5qY 
    ) + PEebife49eVG9UxrWzs6 ( ) + ! rI481uceanJjXJGD 
    * HaFp3fGTPdd * xMcz * wO4iuAeoT <= GDGqhxDukA5Kq0MK 
    ( ) . uP6W6fSG84t . JnZ6NA27du [ qlADsj6L4pYkAjxn0 
    ] / zlyo_RtPzK7UAO8x * NcFq1MN5AjVGtW * PgmdZ5G2k8Pvh0Usvv0 
    - _BnEMKy5jytt_hz + bFerDX + YJaymE0gqTmXrO , sNGD6W4gJIEDDhsxG9S 
    [ 648555019 ] [ 438246077 ] [ 788576377 ] , mmZQy45P03BSx 
    [ 1873064869 ] Jz8PlM8Tl4H [ 288455384 ] = X6ZYI4A42f2Jnoisr6 
    ;
}[ 200131142 ] [ 699910776 ] 
;
$$